Update novas inf
