# server.js
@@ -4,6 +4,7 @@ import loginRouter from './routes/loginRouter.js';
 import cookieParser from 'cookie-parser';
 import swaggerUI from "swagger-ui-express";
 import{createRequire} from "module";
+import usuarioRouter from './routes/usuarioRouter.js';
 const require = createRequire(import.meta.url);
 const outputJson = require("./swagger-output.json");
 
@@ -16,6 +17,7 @@ server.use("/docs", swaggerUI.serve, swaggerUI.setup(outputJson));
 
 server.use("/imovel", imovelRouter);
 server.use("/login", loginRouter);
+server.use("/usuario", usuarioRouter);
 
 server.listen(5000, function(){
     console.log("Servidor web em funcionamento")
